--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,8 @@
 @import "partials/colors";
 @import "partials/layout";
 @import "partials/fonts";
+@import "partials/media";
+@import "partials/hamburger";
 
 ///////////////
 //Components //
