--- a/_includes/headContents.html
+++ b/_includes/headContents.html
@@ -12,6 +12,8 @@
 </script>
 <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="/javascripts/mobile_menu.js"></script>
+
 <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
