--- a/scss/components/_content.scss
+++ b/scss/components/_content.scss
@@ -13,8 +13,8 @@
   }
 
 
-  > h1, > h2, > p, > pre, > ul {
-    margin-bottom: $content-h1-margin-bottom;
+  > h1, > h2, > h3, > p, > pre, > ul {
+    margin: 1em 0;
   }
 
   p {
@@ -42,9 +42,7 @@
 
   > h3 {
     font-size: $subheadline-font-size - 2;
-    margin-bottom: $content-h1-margin-bottom;
-    margin-top: $content-h1-margin-bottom/2;
-    color: $brand-light-graphite;
+    color: darken($brand-blue, 5);
   }
 
   > h4 {
@@ -64,7 +62,7 @@
     margin-left: 20px;
   }
   li {
-    margin-bottom: 1em;
+    margin: 0.5em 0;
   }
 
   code {
@@ -74,10 +72,13 @@
   p code,
   li code {
     background-color: $brand-neutral;
-    padding: 4px 8px;
+    padding: 4px;
     border-radius: 2px;
-    @include interior-shadow($light-shadow, $shadow-small-size);
+    @include box-shadow(inset 0 0 1px $light-shadow);
     white-space: nowrap;
+    font-size: 75%;
+    line-height: 20px;
+    vertical-align: text-top;
   }
 
   a {
