--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@font-face { font-family: "Dosis Light"; src: url('/styles/fonts/dosis-light-webfont.eot?1427825172'); src: url('/styles/fonts/dosis-light-webfont.eot?&1427825172#iefix') format('embedded-opentype'), url('/styles/fonts/dosis-light-webfont.woff?1427825172') format('woff'), url('/styles/fonts/dosis-light-webfont.ttf?1427825172') format('truetype'), url('/styles/fonts/dosis-light-webfont.svg?1427825172') format('svg'); }
+@font-face { font-family: "Dosis Light"; src: url('/styles/fonts/dosis-light-webfont.eot?1428618212'); src: url('/styles/fonts/dosis-light-webfont.eot?&1428618212#iefix') format('embedded-opentype'), url('/styles/fonts/dosis-light-webfont.woff?1428618212') format('woff'), url('/styles/fonts/dosis-light-webfont.ttf?1428618212') format('truetype'), url('/styles/fonts/dosis-light-webfont.svg?1428618212') format('svg'); }
 .cmn-toggle-switch { background: none; display: block; position: relative; overflow: hidden; margin: 0; padding: 0; width: 30px; height: 30px; font-size: 0; text-indent: -9999px; -moz-appearance: none; -webkit-appearance: none; -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; -moz-border-radius: 0; -webkit-border-radius: 0; border-radius: 0; border: none; cursor: pointer; -moz-transition: background 0.2s; -o-transition: background 0.2s; -webkit-transition: background 0.2s; transition: background 0.2s; }
 .cmn-toggle-switch:focus { outline: none; }
 .cmn-toggle-switch > span { display: block; position: absolute; top: 10px; left: 1px; right: 1px; height: 2px; background: #fff; }
@@ -45,7 +45,7 @@ header h2.tagline { font-family: "Dosis Light"; font-size: 32px; }
 #content { -moz-box-shadow: #939393 0 0 3px; -webkit-box-shadow: #939393 0 0 3px; box-shadow: #939393 0 0 3px; background: #FFF; }
 @media only screen and (min-width: 1024px) { #content { margin-left: 10px; float: left; margin-left: 297px; margin-right: 297px; *zoom: 1; position: relative; width: 728px; padding: 34px; margin-top: 122px; } }
 @media only screen and (max-width: 1024px) { #content { padding: 17px; } }
-#content > h1, #content > h2, #content > p, #content > pre, #content > ul { margin-bottom: 32px; }
+#content > h1, #content > h2, #content > h3, #content > p, #content > pre, #content > ul { margin: 1em 0; }
 #content p { line-height: 26px; }
 @media only screen and (min-width: 1024px) { #content p:last-child { margin-bottom: 47px; } }
 @media only screen and (max-width: 1024px) { #content p:last-child { margin-bottom: 32px; } }
@@ -53,13 +53,13 @@ header h2.tagline { font-family: "Dosis Light"; font-size: 32px; }
 #content > h1 { /* [archetype:target-os:begin] --- default --- */ /* [archetype:target-os:end]   --- default --- */ }
 #content > h2 { /* [archetype:styleguide:begin] --- `large headline` --- */ font-size: 18px; font-weight: bold; line-height: 22px; color: black; /* [archetype:styleguide:end] --- `large headline` --- */ font-size: 20px; }
 #content > h2 { /* [archetype:target-os:begin] --- default --- */ /* [archetype:target-os:end]   --- default --- */ }
-#content > h3 { font-size: 18px; margin-bottom: 32px; margin-top: 16px; color: #7f7f7f; }
+#content > h3 { font-size: 18px; color: #005673; }
 #content > h4 { font-size: 16px; margin-bottom: 24px; margin-top: 16px; color: #7f7f7f; }
 #content > h1, #content > h2 { border-bottom-width: 3px; border-style: solid; border-color: #7f7f7f; color: #323232; padding-bottom: 15px; }
 #content ul { margin-left: 20px; }
-#content li { margin-bottom: 1em; }
+#content li { margin: 0.5em 0; }
 #content code { color: #00698c; }
-#content p code, #content li code { background-color: #dddddd; padding: 4px 8px; border-radius: 2px; -moz-box-shadow: inset 0 0 3px #939393; -webkit-box-shadow: inset 0 0 3px #939393; box-shadow: inset 0 0 3px #939393; white-space: nowrap; }
+#content p code, #content li code { background-color: #dddddd; padding: 4px; border-radius: 2px; -moz-box-shadow: inset 0 0 1px #939393; -webkit-box-shadow: inset 0 0 1px #939393; box-shadow: inset 0 0 1px #939393; white-space: nowrap; font-size: 75%; line-height: 20px; vertical-align: text-top; }
 #content a { color: #267f9d; text-decoration: none; }
 #content > pre { -moz-box-shadow: inset 0 0 3px #939393; -webkit-box-shadow: inset 0 0 3px #939393; box-shadow: inset 0 0 3px #939393; overflow-x: auto; background: #dddddd; color: #00698c; padding: 15px; }
 #content > .highlighter-coderay { margin-bottom: 32px; }
