--- a/_includes/headContents.html
+++ b/_includes/headContents.html
@@ -2,9 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="icon" type="image/png" href="/images/favicon.png">
-<link rel="stylesheet" href="/styles/html5reset-1.6.1.css">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/styles/main.css">
+<link rel="stylesheet" href="/css/main.css">
 <script>
   if (window.location && window.location.host && window.location.host === 'linkedin.github.io') {
     window.location = 'http://www.dustjs.com' + window.location.pathname.replace('/dustjs', '') + window.location.search + window.location.hash;
@@ -12,7 +10,7 @@
 </script>
 <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="/javascripts/mobile_menu.js"></script>
+<script src="/js/mobile_menu.js"></script>
 
 <!--[if lt IE 9]>
   <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
