--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -1,10 +1,14 @@
 
 #content {
-  @include even-shadow($light-shadow, $shadow-small-size);
+  @include even-shadow($shadow-light, $shadow-small-size);
   background: #FFF;
 
   @include respond-to(screens) {
-    @include grid($content-columns, $offset: grid-offset($nav-columns + 1));
+    float: left;
+    margin-left: 297px;
+    margin-right: 297px;
+    position: relative;
+    width: 728px;
     padding: $content-padding;
     margin-top: $content-margin-top;
   }
@@ -12,9 +16,9 @@
     padding: $content-padding/2;
   }
 
-
   > h1, > h2, > h3, > p, > pre, > ul {
     margin: 1em 0;
+    border: 0;
   }
 
   p {
@@ -31,12 +35,12 @@
   }
 
   > h1 {
-    @include styleguide(xlarge headline);
+    margin: 0;
     font-size: $headline-font-size;
   }
 
   > h2 {
-    @include styleguide(large headline);
+    margin: 0;
     font-size: $subheadline-font-size;
   }
 
@@ -74,20 +78,20 @@
     background-color: $brand-neutral;
     padding: 4px;
     border-radius: 2px;
-    @include box-shadow(inset 0 0 1px $light-shadow);
+    box-shadow: inset 0 0 1px $shadow-light;
     white-space: nowrap;
     font-size: 75%;
     line-height: 20px;
     vertical-align: text-top;
   }
 
-  a {
-    color: tint($brand-blue, 15);
+  a, a:visited {
+    color: $brand-blue;
     text-decoration: none;
   }
 
   > pre {
-    @include interior-shadow($light-shadow, $shadow-small-size);
+    @include interior-shadow($shadow-light, $shadow-small-size);
     overflow-x: auto;
     background: $brand-neutral;
     color: $brand-blue;
@@ -97,7 +101,7 @@
   > .highlighter-coderay {
     margin-bottom: $content-h1-margin-bottom;
     > .CodeRay > .code {
-    @include interior-shadow($light-shadow, $shadow-small-size);
+    @include interior-shadow($shadow-light, $shadow-small-size);
     overflow-x: auto;
     padding: $pre-padding;
     background: $brand-neutral;
@@ -119,7 +123,7 @@
     }
     > li {
       > ul {
-        @include interior-shadow($light-shadow, $shadow-small-size);
+        @include interior-shadow($shadow-light, $shadow-small-size);
         list-style: none;
         background: $brand-neutral;
         padding: $content-sub-section-padding;
