--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -1,32 +1,27 @@
-////////////
-//Columns //
-////////////
+%hidden {
+  margin: -1px;
+  padding: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  position: absolute;
+}
+
 $nav-columns: 6;
 $content-columns: 18;
 
-///////////
-//Widths //
-///////////
 $nav-width: 205px;
 $tagline-width: 796px;
 
-////////////
-//Heights //
-////////////
 $nav-mobile-max-height: 30px;
 $nav-mobile-max-height-expanded: 600px;
 $hamburger-height: 2px;
 
-
-////////////
-//Indents //
-////////////
 $nav-indent: 24px;
 $nav-sub-indent: 10px;
 
-////////////
-//Margins //
-////////////
 $header-margin-bottom: 34px;
 $content-margin-top: 122px;
 $content-h1-margin-bottom: 32px;
@@ -35,35 +30,20 @@ $coderay-line-number-margin: 10px;
 $get-dust-mobile-margin-top: 15px;
 $hamburger-margin-top: 5px;
 
-//////////////
-//Positions //
-//////////////
 $tagline-position-top: 35px;
 $tagline-position-left: 300px;
 $hamburger-span-top: 10px;
 
-/////////////
-//Paddings //
-/////////////
 $content-padding: 34px;
 $pre-padding: 15px;
 $content-sub-section-padding: 15px;
 $nav-handheld-vertical-padding: 15px;
 $get-dust-mobile-padding: 10px;
 
-////////////
-//Shadows //
-////////////
 $shadow-small-size: 3px;
 $shadow-large-size: 5px;
 
-///////////
-//Radius //
-///////////
 $get-dust-mobile-radius: 2px;
 
-//////////
-//Times //
-//////////
 $nav-mobile-expand-time: 0.2s;
 $hamburger-transition-time: 0.2s;
