Add Coderay syntax highlighting

--- a/_sass/partials/_colors.scss
+++ b/_sass/partials/_colors.scss
@@ -2,6 +2,7 @@ $brand-blue: #00698c;
 $brand-graphite: #323232;
 $brand-light-graphite: #7f7f7f;
 $brand-neutral: #dddddd;
+$brand-light: #eee;
 
 $shadow-light: #939393;
 $shadow-dark: #343434;
