--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
 @import "partials/fonts";
 @import "partials/media";
 @import "partials/hamburger";
+@import "partials/coderay";
 
 @import "components/nav";
 @import "components/header";
