--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -90,31 +90,7 @@
     text-decoration: none;
   }
 
-  > pre {
-    @include interior-shadow($shadow-light, $shadow-small-size);
-    overflow-x: auto;
-    background: $brand-neutral;
-    color: $brand-blue;
-    padding: $pre-padding;
-  }
-
-  > .highlighter-coderay {
-    margin-bottom: $content-h1-margin-bottom;
-    > .CodeRay > .code {
-    @include interior-shadow($shadow-light, $shadow-small-size);
-    overflow-x: auto;
-    padding: $pre-padding;
-    background: $brand-neutral;
-      > pre > span.line-numbers > a {
-        margin-right: $coderay-line-number-margin;
-        color: shade($brand-light-graphite, 5);
-      }
-    }
-  }
-
-
-
-  #parameters + ul {
+  [id^=parameters] + ul {
     list-style: none;
     margin-left: 0;
     ul {
