GitHub Pages: fenced blocks, highlighting, kramdown. Pick two.

--- a/_sass/components/_content.scss
+++ b/_sass/components/_content.scss
@@ -90,6 +90,14 @@
     text-decoration: none;
   }
 
+  > pre {
+    @include interior-shadow($shadow-light, $shadow-small-size);
+    overflow-x: auto;
+    background: $brand-neutral;
+    color: $brand-blue;
+    padding: $pre-padding;
+  }
+
   [id^=parameters] + ul {
     list-style: none;
     margin-left: 0;
